--- a/Views/Weapons/ListWeapons.cshtml
+++ b/Views/Weapons/ListWeapons.cshtml
@@ -34,7 +34,7 @@
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
                     <div class="card__header-text">
                         <h3 class="card__title">@weapons.WeaponName</h3>
-                        <span class="card__status" id="weapontype">@type</span>
+                        <span class="card__status">@type</span>
                     </div>
                 </div>
                 <p class="card__description">@weapons.WeaponDescription</p>
