--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - GenshinDB</title>
+    <title>@ViewData["Title"]Genshin Database</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/card.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -40,11 +40,11 @@
                 <span class="tooltip">Weapons</span>
             </li>
             <li>
-                <a class="" asp-area="" asp-controller="Characters" asp-action="ListCharacters">
+                <a class="" asp-area="" asp-controller="Nations" asp-action="ListNations">
                     <i class='bx bx-chat'></i>
-                    <span class="links_name">Artifacts</span>
+                    <span class="links_name">Nations</span>
                 </a>
-                <span class="tooltip">Artifacts</span>
+                <span class="tooltip">Nations</span>
             </li>
             <li class="profile">
                 <div class="profile-details">
