--- a/Views/Weapons/ListWeapons.cshtml
+++ b/Views/Weapons/ListWeapons.cshtml
@@ -27,7 +27,7 @@
                 break;
         }
 
-        <a class="card" href="#">
+        <a class="card" asp-controller="Weapons" asp-action="WeaponDetails" asp-route-id="@weapons.WeaponID">
             <img style="width:100%; height:auto;" src="@weapons.WeaponImageURL" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
