--- a/wwwroot/css/card.css
+++ b/wwwroot/css/card.css
@@ -14,7 +14,7 @@ body {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fill, min(200px));
     gap: 2rem;
     margin: 4rem 5vw;
     padding: 0;
@@ -104,7 +104,7 @@ body {
 }
 
 .card__status {
-    font-size: .8em;
+    font-size: .7em;
     color: #D7BDCA;
 }
 
