--- a/Views/Characters/ListCharacters.cshtml
+++ b/Views/Characters/ListCharacters.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<GenshinDB.Models.Characters>
 
 <div>
-    <h2 style="margin-top:8px;">Characters</h2>
+    <h2>Characters</h2>
 </div>
 
 <ul class="cards">
@@ -14,6 +14,10 @@
         {
             case "1":
                 vision = "Pyro";
+                break;
+
+            case "2":
+                vision = "Hydro";
                 break;
         }
 
@@ -48,7 +52,7 @@
             <img style="width:100%; height:auto;" src="@characters.CharactersImageURL" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path/></svg>
+                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
                     <div class="card__header-text">
                         <h3 class="card__title">@characters.CharactersName </h3>
                         <h6 class="card__status">@nation - @vision</h6>
