--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,7 +26,7 @@
     transition: all 0.5s ease;
 }
 
-    .sidebar.open {
+    .sidebar {
         width: 250px;
     }
 
@@ -50,8 +50,8 @@
             transition: all 0.5s ease;
         }
 
-    .sidebar.open .logo-details .icon,
-    .sidebar.open .logo-details .logo_name {
+    .sidebar .logo-details .icon,
+    .sidebar .logo-details .logo_name {
         opacity: 1;
     }
 
@@ -69,7 +69,7 @@
         padding-right: 10px;
     }
 
-    .sidebar.open .logo-details #btn {
+    .sidebar .logo-details #btn {
         text-align: right;
     }
 
@@ -119,7 +119,7 @@
             transform: translateY(-50%);
         }
 
-    .sidebar.open li .tooltip {
+    .sidebar li .tooltip {
         display: none;
     }
 
@@ -137,7 +137,7 @@
         background: #1d1b31;
     }
 
-    .sidebar.open input {
+    .sidebar input {
         padding: 0 20px 0 50px;
         width: 100%;
     }
@@ -153,7 +153,7 @@
         padding-left: 5px;
     }
 
-    .sidebar.open .bx-search:hover {
+    .sidebar .bx-search:hover {
         background: #1d1b31;
         color: #FFF;
     }
@@ -174,7 +174,7 @@
         background: #11101D;
     }
 
-        .sidebar.open li a:hover {
+        .sidebar li a:hover {
             background: #FFF;
         }
 
@@ -188,7 +188,7 @@
             transition: 0.4s;
         }
 
-    .sidebar.open li a .links_name {
+    .sidebar li a .links_name {
         opacity: 1;
         pointer-events: auto;
     }
@@ -222,7 +222,7 @@
         overflow: hidden;
     }
 
-    .sidebar.open li.profile {
+    .sidebar li.profile {
         width: 250px;
     }
 
@@ -265,7 +265,7 @@
         transition: all 0.5s ease;
     }
 
-    .sidebar.open .profile #linkedin {
+    .sidebar .profile #linkedin {
         width: 50px;
         background: none;
     }
@@ -290,7 +290,7 @@
     transition: all 0.5s ease;
 }
 
-.sidebar.open ~ .home-section {
+.sidebar ~ .home-section {
     left: 250px;
     width: calc(100% - 250px);
 }
