--- a/wwwroot/css/CharacterPage.css
+++ b/wwwroot/css/CharacterPage.css
@@ -5,28 +5,19 @@
 body {
     margin-top: 100px;
     font-family: 'Figtree', sans-serif;
-    width: 100%;
-    height: 1080px;
-    background-image: url(/res/images/pyroBackground.png);
+    width: 60%;
+    height: 60%;
+    background-image: url(/res/images/characters/pyroBackground.png);
 }
 
 body h2, h3{
     font-size: 18px;
 }
-body .character-wish{
-    top: -5%;
-    position: absolute;
-    left:50%;
-    width: 40%;
-    height: 70%;
-    overflow: hidden;
-    z-index: -1;
-}
 
 body .character-title-info{
     justify-content: center;
-    margin-left:10%;
-    margin-bottom: 400px;
+    margin-left:30%;
+    margin-bottom: 200px;
     color: white;
 }
 
@@ -65,8 +56,8 @@ body .character-title-info .Title{
 }
 
 body .character-title-info .character-icon {
-    width:80px;
-    height:80px;
+    width:90px;
+    height:90px;
     margin-top: 12px;
 }
 
@@ -79,20 +70,20 @@ body .character-title-info .vision-img {
 
 body .character{
     justify-content: center;
-    margin-left: 10%;
-    width: 80%;
+    margin-left: 30%;
+    width: 100%;
     justify-content: center;
     padding: 20px;
     border-radius: 20px;
     background-color: rgba(61, 24, 24, 0.870);
 }
 
-body .character h3{
+body .character  h3{
     color: rgb(108, 80, 80);
 }
 
 body .character h2{
-    color: rgb(108, 80, 80);
+    color: rgba(255,255,255,0.5);
     font-size: 30px;
     font-weight: 700;
 }
